--- a/templates/rabbitmq.conf.j2
+++ b/templates/rabbitmq.conf.j2
@@ -71,3 +71,9 @@ management.ssl.fail_if_no_peer_cert = {{ rabbitmq_ssl_fail_if_no_peer_cert | low
 management.tcp.ip = {{ rabbitmq_management_bind_address }}
 management.tcp.port = {{ rabbitmq_management_bind_tcp_port }}
 {% endif %}
+
+{% if rabbitmq_tcp_listen_options is defined %}
+{% for key,value in rabbitmq_tcp_listen_options.items() %}
+tcp_listen_options.{{ key}} = {{ value }}
+{% endfor %}
+{% endif %}
